--- a/idm/api-documentation.html
+++ b/idm/api-documentation.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta
           name="description"
-          content="IDM API Documentation (Beta)"
+          content="IDM API Documentation"
   />
   <title>IDM API Documentation (Beta)</title>
   <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css"/>
