--- a/fileupload/index.html
+++ b/fileupload/index.html
@@ -7,7 +7,7 @@
     name="description"
     content="Fileupload API Documentation"
   />
-  <title>IDM API Documentation</title>
+  <title>DSP Fileupload API Documentation</title>
   <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css" />
 </head>
 <body>
