Update email-proxy URLs

--- a/email/api-documentation.html
+++ b/email/api-documentation.html
@@ -19,11 +19,11 @@
     window.ui = SwaggerUIBundle({
       urls: [
         {
-          url: "https://email-proxy.prod.dsp.vaillant-group.cloud/v3/api-docs",
+          url: "https://email-proxy.dsp.vaillant-group.com/v3/api-docs",
           name: "PROD"
         },
         {
-          url: "https://email-proxy.qa.dsp.vaillant-group.cloud/v3/api-docs",
+          url: "https://email-proxy-qa.dsp.vaillant-group.com/v3/api-docs",
           name: "QA"
         }
       ],
